tests/pos/import-rename/lib.jo
namespace lib

def double(n: Int): Int = n + n

def triple(n: Int): Int = n + n + n
