tests/neg/namespace-import-branch/test.jo
namespace test.lib

type A = Int

def double(n: A): A = n + n
